1999-08-26  Larry Jones  <larry.jones@sdrc.com>

	* lock.c (lock_name): Remove side-effects from assert() expression
	since they won't occur if NDEBUG is defined (not that that's a good
	thing to do).  (Reported by KOIE Hidetaka <hide@koie.org>.)

1999-08-25  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Use "${AWK}" instead of "awk" to make it easier for
	people to use nawk/gawk/etc.; use an explicit "-print" with find
	since some older version don't assume it; rename tests to avoid
	duplicate importc-8.  (Changes along these lines suggested by
	Chris Cameron <chris.cameron@ot.co.nz>.)

1999-08-24  Larry Jones  <larry.jones@sdrc.com>

	* commit.c (check_fileproc): Don't crash when a file has no
	repository, just treat it as unknown.  (Reported by Stefaan
	Diericx <stefaan.diericx@argenta.be>.)
	* sanity.sh (errmsg2): New tests, for this fix.

1999-08-18  Larry Jones  <larry.jones@sdrc.com>

	* update.c (special_file_mismatch): Initialize *_hardlinks to
	avoid trying to free garbage later on.  (Reported by Jan
	Scheffczyk <herta@Xterminator.StudFB.UniBw-Muenchen.de>.)

1999-08-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (basicc-11): Older versions of sh don't understand
	``if ! test...''.  (Patch submitted by David J N Begley
	<david@avarice.nepean.uws.edu.au>.)

1999-08-17  Larry Jones  <larry.jones@sdrc.com>

	* client.c, hardlink.c, hash.c, hash.h, main.c, recurse.c: Change
	enum constant UNKNOWN to avoid conflicts on HPUX 11.0.  (Reported
	by Laurent Duperval <laurent.duperval@cgi.ca>.)

1999-08-16  Larry Jones  <larry.jones@sdrc.com>

	client.c: Eliminate redundant #if.  (Patch submitted by Assar
	Westerlund <assar@sics.se>.)
  
1999-07-30  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_checkin): Terminate cleanly if RCS_addbranch fails
	rather than blithely continuing on and crashing.
	* sanity.sh (basica): New tests, for this fix.

1999-07-29  Larry Jones  <larry.jones@sdrc.com>
